tests/ui/consts/issue-3521.stderr
error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/issue-3521.rs:8:15
   |
LL |         Bar = foo
   |               ^^^ non-constant value
   |
help: consider using `const` instead of `let`
   |
LL -     let foo: isize = 100;
LL +     const foo: isize = 100;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0435`.
